--- a/medicalCase_v3/WriteMedicalCase/WriteCaseStoryboard.storyboard
+++ b/medicalCase_v3/WriteMedicalCase/WriteCaseStoryboard.storyboard
@@ -448,6 +448,9 @@
                                     <string>Title</string>
                                     <string>Title</string>
                                 </scopeButtonTitles>
+                                <connections>
+                                    <outlet property="delegate" destination="U6H-kS-o37" id="Fvs-xs-2SH"/>
+                                </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="62" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7Je-0E-4Zz">
                                 <rect key="frame" x="0.0" y="88" width="600" height="512"/>
@@ -561,7 +564,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="1Xm-5n-I96"/>
                     <connections>
-                        <outlet property="searchBar" destination="CJg-Pz-NQo" id="IGG-eE-V3S"/>
+                        <outlet property="searchBar" destination="CJg-Pz-NQo" id="2Uc-sK-RiT"/>
                         <outlet property="tableView" destination="7Je-0E-4Zz" id="Aqm-OZ-ep5"/>
                         <segue destination="ga9-ac-mQO" kind="show" identifier="templateContent" id="LId-G6-Mg5"/>
                     </connections>
@@ -604,14 +607,14 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="568" translatesAutoresizingMaskIntoConstraints="NO" id="H9g-zB-bVn" customClass="RWLabel">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="568" translatesAutoresizingMaskIntoConstraints="NO" id="H9g-zB-bVn" customClass="RWLabel">
                                 <rect key="frame" x="16" y="76" width="568" height="21"/>
                                 <color key="backgroundColor" red="0.38016381269999999" green="1" blue="0.95062566839999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="568" translatesAutoresizingMaskIntoConstraints="NO" id="xSR-hB-B2S" customClass="RWLabel">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="568" translatesAutoresizingMaskIntoConstraints="NO" id="xSR-hB-B2S" customClass="RWLabel">
                                 <rect key="frame" x="16" y="129" width="568" height="21"/>
                                 <color key="backgroundColor" red="0.2156862745" green="0.50196078430000002" blue="0.72941176470000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
